--- a/cromnix-repo.in
+++ b/cromnix-repo.in
@@ -1,7 +1,96 @@
 #!/bin/bash
-REPOS=('main' 'cromnix' 'vanilla' 'multilib' 'openrc' 'lfs' 's6' 'runit')
+REPOS=('main' 'multilib' 'lfs' 's6' 'runit')
 PACCACHE=1
 KEY=''
+
+# system packages
+whitelist=(
+	'acl'
+	'libacl'
+	'acl-doc'
+	'attr'
+	'libattr'
+	'attr-doc'
+	'autoconf'
+	'automake'
+	'automake-doc'
+	'bash'
+	'libbash'
+	'bash-doc'
+	'bc'
+	'binutils'
+	'bison'
+	'libbison'
+	'bison-doc'
+	'bzip2'
+	'libbzip2'
+	'bzip2-doc'
+	'coreutils'
+	'cromnix'
+	'cromnix-buildtools'
+	'cromnix-utils'
+	'diffutils'
+	'dosfstools'
+	'e2fsprogs'
+	'eudev'
+	'eudev-openrc'
+	'expat'
+	'fakeroot'
+	'file'
+	'findutils'
+	'flex'
+	'gawk'
+	'gcc'
+	'gdbm'
+	'gettext'
+	'glibc'
+	'gmp'
+	'gperf'
+	'grep'
+	'groff'
+	'grub'
+	'gzip'
+	'iana-etc'
+	'inetutils'
+	'intltool'
+	'iproute2'
+	'kbd'
+	'kmod'
+	'less'
+	'libarchive'
+	'libcap'
+	'libpipeline'
+	'libtool'
+	'linux-api-headers'
+	'm4'
+	'make'
+	'man-db'
+	'man-pages'
+	'mpc'
+	'mpfr'
+	'ncurses'
+	'openrc'
+	'pacman'
+	'pacman-contrib'
+	'patch'
+	'perl'
+	'perl-module-build'
+	'perl-xml-parser'
+	'pkg-config'
+	'po4a'
+	'procps-ng'
+	'psmisc'
+	'readline'
+	'sed'
+	'shadow'
+	'sysklogd'
+	'tar'
+	'texinfo'
+	'util-linux'
+	'libutil-linux'
+	'xz'
+	'zlib'
+)
 
 shopt -s extglob
 
@@ -31,12 +120,17 @@ usage() {
 	exit 0;
 }
 
+in_array() {
+	local element
+	for element in "${@:2}"; do
+		[[ "$element" == "$1" ]] && return 0;
+	done
+	return 1
+}
+
 addpackages() {
 	repo_main=()
-	repo_cromnix=()
-	repo_vanilla=()
 	repo_multilib=()
-	repo_openrc=()
 	repo_lfs=()
 	repo_s6=()
 	repo_runit=()
@@ -47,9 +141,20 @@ addpackages() {
 
 	# add the files to the repo and move them
 	if [ -d ./out/srcpkg ]; then
-		pushd ./out/srcpkg
-		cp -v {*.src.tar.gz,*.src.tar.xz} /var/lib/cromnix-sources 2>/dev/null
-		popd
+		pushd ./out/srcpkg > /dev/null
+		for file in $(find ./ -maxdepth 1 -type f -not -name '*.sig' | sort -V  | grep 'src.tar.gz\|src.tar.xz'); do
+			file="$(basename "$(test -L "${file}" && readlink "${file}" || echo "${file}")")"
+			cp "${file}" "/var/lib/cromnix-sources/${file}"
+			if [ -f "${file}.sig" ]; then
+				rm "${file}.sig"
+			fi
+			if [ ! "${KEY}" == '' ]; then
+				arg="-u ${KEY}"
+			fi
+			gpg ${arg} -b "${file}"
+			cp "${file}.sig" "/var/lib/cromnix-sources/${file}.sig"
+		done
+		popd > /dev/null
 	fi
 	if [ -d ./out/pkg ]; then
 		cd ./out/pkg
@@ -60,38 +165,33 @@ addpackages() {
 	# get a list of the packages and sort them into repos
 	for file in $(find ./ -maxdepth 1 -type f -not -name '*.sig' | sort -V  | grep 'pkg.tar.gz\|pkg.tar.xz'); do
 		file="$(basename "$(test -L "${file}" && readlink "${file}" || echo "${file}")")"
-		case "${file}" in
-			*-openrc*.pkg.tar.@(gz|xz)) repo_openrc+=("${file}");;
-			*-lfs*.pkg.tar.@(gz|xz)) repo_lfs+=("${file}");;
-			runit*.pkg.tar.@(gz|xz)) repo_runit+=("${file}");;
-			*-runit*.pkg.tar.@(gz|xz)) repo_runit+=("${file}");;
-			lfs-bootscripts*.pkg.tar.@(gz|xz)) repo_lfs+=("${file}");;
-			blfs-bootscripts*.pkg.tar.@(gz|xz)) repo_lfs+=("${file}");;
-			s6*.pkg.tar.@(gz|xz)) repo_s6+=("${file}");;
-			execline*.pkg.tar.@(gz|xz)) repo_s6+=("${file}");;
-			skalibs*.pkg.tar.@(gz|xz)) repo_s6+=("${file}");;
-			*-cromnix*.pkg.tar.@(gz|xz)) repo_cromnix+=("${file}");;
-			*-vanilla*.pkg.tar.@(gz|xz)) repo_vanilla+=("${file}");;
-			*-multilib*.pkg.tar.@(gz|xz)) repo_multilib+=("${file}");;
-			*lib32-*.pkg.tar.@(gz|xz)) repo_multilib+=("${file}");;
-			* ) repo_main+=("${file}") ;;
-		esac
+		pkgname=${file%-*-*-*.pkg.tar.xz}
+		in_array ${pkgname} "${whitelist[@]}"
+		if [ "$?" -eq 0 ]; then
+			# This could be used to split off a core repo
+			repo_main+=("${file}")
+		else
+			case "${file}" in
+				*-lfs*.pkg.tar.@(gz|xz)) repo_lfs+=("${file}");;
+				runit*.pkg.tar.@(gz|xz)) repo_runit+=("${file}");;
+				*-runit*.pkg.tar.@(gz|xz)) repo_runit+=("${file}");;
+				lfs-bootscripts*.pkg.tar.@(gz|xz)) repo_lfs+=("${file}");;
+				blfs-bootscripts*.pkg.tar.@(gz|xz)) repo_lfs+=("${file}");;
+				s6*.pkg.tar.@(gz|xz)) repo_s6+=("${file}");;
+				execline*.pkg.tar.@(gz|xz)) repo_s6+=("${file}");;
+				skalibs*.pkg.tar.@(gz|xz)) repo_s6+=("${file}");;
+				*-multilib*.pkg.tar.@(gz|xz)) repo_multilib+=("${file}");;
+				*lib32-*.pkg.tar.@(gz|xz)) repo_multilib+=("${file}");;
+				* ) repo_main+=("${file}");;
+			esac
+		fi
 	done
 
 	if [ ${#repo_main[@]} -gt 0 ]; then
 		addpackages_repo main ${repo_main[@]}
 	fi
-	if [ ${#repo_cromnix[@]} -gt 0 ]; then
-		addpackages_repo cromnix ${repo_cromnix[@]}
-	fi
-	if [ ${#repo_vanilla[@]} -gt 0 ]; then
-		addpackages_repo vanilla ${repo_vanilla[@]}
-	fi
 	if [ ${#repo_multilib[@]} -gt 0 ]; then
 		addpackages_repo multilib ${repo_multilib[@]}
-	fi
-	if [ ${#repo_openrc[@]} -gt 0 ]; then
-		addpackages_repo openrc ${repo_openrc[@]}
 	fi
 	if [ ${#repo_lfs[@]} -gt 0 ]; then
 		addpackages_repo lfs ${repo_lfs[@]}
@@ -108,20 +208,21 @@ addpackages_repo() {
 	for file in "${@:2}"; do
 		cp "${file}" "/var/lib/cromnix-repo/${1}/x86_64/${file}"
 		if [ -f "${file}.sig" ]; then
-			cp "${file}.sig" "/var/lib/cromnix-repo/${1}/x86_64/${file}.sig"
-		else
-			if [ ! "${KEY}" == '' ]; then
-				arg="-u ${KEY}"
-			fi
-			gpg ${arg} -b "${file}"
+			rm "${file}.sig"
 		fi
+		if [ ! "${KEY}" == '' ]; then
+			arg="-u ${KEY}"
+		fi
+		gpg ${arg} -b "${file}"
+		cp "${file}.sig" "/var/lib/cromnix-repo/${1}/x86_64/${file}.sig"
 	done
-	pushd "/var/lib/cromnix-repo/${1}/x86_64"
+	pushd "/var/lib/cromnix-repo/${1}/x86_64" > /dev/null
 	if [ ! "${KEY}" == '' ]; then
 		arg="-k ${KEY}"
 	fi
-	repo-add --sign ${arg} -d "${1}.db.tar.gz" "${@:2}"
-	popd
+	#repo-add --sign ${arg} -d "${1}.db.tar.xz" "${@:2}"
+	repo-add -d "${1}.db.tar.xz" "${@:2}"
+	popd > /dev/null
 }
 
 rebuildrepo() {
@@ -130,14 +231,14 @@ rebuildrepo() {
 		cd "/var/lib/cromnix-repo/${REPO}/x86_64"
 
 		# backup the old database
-		if [ -e "${REPO}.db.tar.gz" ]; then
-			mv "${REPO}.db.tar.gz" "${REPO}.db.tar.gz.bkp"
+		if [ -e "${REPO}.db.tar.xz" ]; then
+			mv "${REPO}.db.tar.xz" "${REPO}.db.tar.xz.bkp"
 		fi
 		if [ -h "${REPO}.db" ]; then
 			rm "${REPO}.db"
 		fi
-		if [ -e "${REPO}.files.tar.gz" ]; then
-			mv "${REPO}.files.tar.gz" "${REPO}.files.tar.gz.bkp"
+		if [ -e "${REPO}.files.tar.xz" ]; then
+			mv "${REPO}.files.tar.xz" "${REPO}.files.tar.xz.bkp"
 		fi
 		if [ -h "${REPO}.files" ]; then
 			rm "${REPO}.files"
@@ -157,14 +258,15 @@ rebuildrepo() {
 		if [ ! "${KEY}" == '' ]; then
 			arg="-k ${KEY}"
 		fi
-		repo-add --sign ${arg} -d "${REPO}.db.tar.gz" "${packages[@]}"
+		#repo-add -q --sign ${arg} -d "${REPO}.db.tar.xz" "${packages[@]}"
+		repo-add -q -d "${REPO}.db.tar.xz" "${packages[@]}"
 
 		# rotate in the old database files
-		if [ -e "${REPO}.db.tar.gz.bkp" ]; then
-			mv "${REPO}.db.tar.gz.bkp" "${REPO}.db.tar.gz.old"
+		if [ -e "${REPO}.db.tar.xz.bkp" ]; then
+			mv "${REPO}.db.tar.xz.bkp" "${REPO}.db.tar.xz.old"
 		fi
-		if [ -e "${REPO}.files.tar.gz.bkp" ]; then
-			mv "${REPO}.files.tar.gz.bkp" "${REPO}.files.tar.gz.old"
+		if [ -e "${REPO}.files.tar.xz.bkp" ]; then
+			mv "${REPO}.files.tar.xz.bkp" "${REPO}.files.tar.xz.old"
 		fi
 	done
 }
